# stt-movie-subs

./: .env.public  .gitattributes  .gitignore  README.md  pyproject.toml
checkpoints/: readme.md
checkpoints/wav2vec2/checkpoint-15276/: config.json  rng_state.pth  scheduler.pt  trainer_state.json
checkpoints/wav2vec2/checkpoint-2280/: config.json  rng_state.pth  scheduler.pt  tokenizer_config.json  trainer_state.json
checkpoints/wav2vec2/checkpoint_01/: model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt
data/test/: metadata.json
data/test/Once Upon a Time in Hollywood (2019)/: segment_000001.txt  segment_000047.txt  segment_000096.txt  segment_000184.txt  segment_000200.txt
docs/: readme.md
docs/assets/: data_pipeline_graph.drawio
docs/readmes/: 01_env_setup.md  02_qbittorrent_setup.md  03_data_pipeline.md  04_data_preprocessing.md  05_deepspeech.md  06-exploratory-data-analysis.md  06_exploratory_data_analysis.md  07_wav2vec2.md
movie2sub/: config.py
movie2sub/data_scripts/: dataset_building.py
movie2sub/experiments/: audio_extraction.py  sub_extraction.py  torrent_downloading.py  vocal_extraction.py
movie2sub/models/: dataloader.py  deepspeech2.py  preprocessing.py  wav2vec2.py
movie2sub/utils/: audio.py  custom_types.py  ffmpeg.py  ffmpeg_functions.py  files.py  preprocessing.py  text.py  torrent.py  yts_scraper.py
notebooks/: movie2sub-dataloader-example.ipynb  movie2sub-deepspeech2.ipynb  movie2sub-eda.ipynb  movie2sub-preprocessing.ipynb  movie2sub-wav2vec2.ipynb  readme.md
plots/: readme.md
scripts/: ffmpeg_install.ps1
